phil_subtheme/style.css
/* ... */
#home-quote h2 {
  margin: 0 0 10px;
}

/*-------------------------------------------*
/* Home Highlights
/*-------------------------------------------*/
.home-highlight-box {
  float: left;
  width: 290px;
  margin-right: 25px;
  text-align: center;
}

.home-highlight-box h2 {
  font-size: 16px;
  font-weight: bold;
  margin-bottom: 12px;
}

.home-highlight-box img {
  margin-bottom: 10px;
  -moz-box-shadow: 0px 0px 5px #CCC;
  -webkit-box-shadow: 0px 0px 5px #CCC;
  box-shadow: 0px 0px 5px #CCC;
}

/*-------------------------------------------*
/* Footer
/*-------------------------------------------*/
#footer-wrap{
	margin-top: 40px;
}

#footer-saran h2 {
  font-size: 14px;
  font-weight: bold;
  margin-bottom: 10px;
}

.footer-box {
  float: left;
  width: 215px;
  margin-right: 20px;
  margin-bottom: 20px;
}

.footer-box img {
  -moz-box-shadow: 0px 0px 5px #CCC;
  -webkit-box-shadow: 0px 0px 5px #CCC;
  box-shadow: 0px 0px 5px #CCC;
}

.region-footer {
  margin-bottom: 20px;
    font-col
}

/*-------------------------------------------*
/* Front-page Slider 
/*-------------------------------------------*/
#slider {
  position: relative;
  width: 100&;
  margin-bottom: 40px;
}

#flexslider-1 {
  border: 0;
}

#home-quote  {
    background: black;
    color:white;
}

#home-quote  h2{
    background: black;
    color:white;
}

.main_view {
  float: left;
  position: relative;
}

.window {
  position: relative;
  width:100%;
  height: auto;
}

.image_reel {
  position: absolute;
  top: 0;
  left: 0;
}

.image_reel img {
  float: left;
    max-width: 100%;
}

.paging {
  padding: 5px 0 15px 0;
  text-align: center;
  background:url(images/slide-shadow.png) center -7px no-repeat;
  z-index: 100;
}

.paging a {
  text-indent:-9999px;
  background:url(images/slide-nav-button.png) no-repeat center;
  width:14px;
  height:14px;
  display:inline-block;
  margin: 4px;
  border:none;
  outline:none;
}

.paging a.active {
  background:url(images/slide-nav-button-hover.png) no-repeat center; 
  border:none; 
  outline:none;
}

.paging a:hover {
  font-weight: bold;
  border:none;
  outline:none;
}

.desc {
  width:930px;
  display: none;
  position: absolute;
  bottom: 0;
  left: 0;
  z-index: 101;
  background: url(images/30w087b.png);
  color: #fff;
  font-size: 1.7em;
  padding: 10px;
  border-radius: 0 0 3px 0;
  -moz-border-radius: 0 0 3px 0;
  -khtml-border-radius: 0 0 3px 0;
  -webkit-border-radius: 0 0 3px 0;
}

.desc p {
  margin: 0;
}

#header {
  z-index:5;
}

#slider { 
  z-index:1;
}

.content ul, .content ol{
    padding-left: 0 !important;
}

/*-------------------------------------------*
/*Nodes &Pages
/*-------------------------------------------*/
#post-content {
  display: inline;
  margin: 0;
}

body.sidebar-first #post-content {
  float: left;
  margin: 0;
  padding: 0;
  width: 620px;
}

.node {
  margin-bottom: 20px;
  padding-bottom: 20px;
  border-bottom: 1px solid #EEE;
}

#post-content h1 {
  margin-bottom: 0px;
}

.page-title {
  margin-bottom: 10px !important;
}
#breadcrumbs {
  border-bottom: 1px solid #EEE;
  padding-bottom: 5px;
  font-size: 11px;
  margin-bottom: 20px;
}

/*-------------------------------------------*
/*Sidebar
/*-------------------------------------------*/
#sidebar {
  float: right;
  width: 260px;
}

#sidebar .block {
  margin-bottom: 30px;
}

#sidebar .block h2 {
  color: #666;
  border-bottom: 1px solid #EEE;
  padding-bottom: 10px;
  margin-bottom: 10px;
  font-weight: bold;
}

/*-------------------------------------------*
/*Copyright
/*-------------------------------------------*/
#copyright {
  border-top: 1px solid #EEE;
  padding-top: 18px;
  margin-top:10px;
  font-size: 12px;
}

.credits {
  float: right;
}

/*************************/
.submitted {
  background: #dfdddd;
  padding: 4px 9px;
  border-radius: 4px;
  color: #383838;
  text-shadow: 1px 1px #fff;
  clear: both;
  display: block;
  margin-bottom: 2px;
}

.links {
  color: #000;
  margin-top: 10px;
  font-size: 14px;
}

.links li a {
  background: #d3d1d1;
  padding: 4px 5px;
  border-radius: 4px;
  color: #383838;
  text-shadow: 1px 1px #fff;
  font-weight: normal;
}

.links li a:hover {
  color: #B81007;
}

.content ul, .content ol {
  padding-left:20px;
}

.content table {
  background: #ececec;
  border: 1px solid #bbbbbb;
}

.content th {
  background: #dbdbdb;
  padding: 5px 4px;
  text-shadow: 1px 1px #fff;
  border-right: 1px solid #c8c7c7;
}

.content td {
  background: #ebebeb;
  color: #747474;
  text-align: left;
  padding-left: 4px;
  border-right: 1px solid #c8c7c7;
  border-bottom: 1px solid #c8c7c7;
}

/*-------------------------------------------*
/* Fix CKEditor style
/*-------------------------------------------*/
#main table.cke_editor {
  background: transparent;
  border: 0;
}
#main table.cke_editor td {
  background: transparent;
  padding: 0;
  border: 0;
}

/*-------------------------------------------*
/* Poll, Buttons, Form
/*-------------------------------------------*/
.poll .vote-form .choices .title {
  font-size: 14px;
  font-weight: normal;
  line-height: 2;
}

.poll .vote-form .choices {
  margin: 0;
}

.form-submit {
  -moz-transition: all 0.2s ease-in-out 0s;
  border-radius: 5px;
  cursor: pointer;
  background: none repeat scroll 0 0 #B81007;
  border: 1px solid #9D4D2C;
  color: #fff;
  padding: 4px 6px;
  text-shadow: 1px 1px 1px #300033;
  margin-right: 4px;
  margin-bottom: 5px;
  font-weight: bold;
}

.form-submit:hover {
  background: none repeat scroll 0 0 #CF5240;
}

input.form-checkbox, input.form-radio {
  vertical-align: baseline;
}

.form-text {
  border-radius: 3px;
  border: 1px solid #acacac;
  padding: 4px 5px;
}

/*-------------------------------------------*
/* Menus and item lists 
/*-------------------------------------------*/
.item-list ul {
  margin: 0;
  padding: 0 0 0 1.5385em;
}

.item-list ul li {
  margin: 0;
  padding: 0;
}

ul.menu li {
  margin: 0;
  padding: 0;
}

ul.inline {
  clear: both;
}
/* ... */

